# fitness-app

./: .env.example  .gitignore  AI_POLLING_FINAL_CHECKLIST.md  AI_POLLING_FIX_VERIFICATION.md  API_INTEGRATION_TEST_REPORT.md  ARCHITECTURE_AUDIT_REPORT.md  AUDIT_SUMMARY.md  AVATAR_IMPLEMENTATION_SUMMARY.md  BROWSER_DEBUG_MODE.md  BUILD_AND_TEST_REPORT.md  CLAUDE.md  COMMIT_MESSAGE.md  DB_MIGRATION_AND_BACKUPS_REPORT.md  DEBUG_REFACTORING_AUDIT.md  DEBUG_REFACTORING_SUMMARY.md  DEPLOYMENT_RUNBOOK.md  DEV.md  DEV_PROD_ISOLATION_CHECKLIST.md  ERROR_CONTRACT_VALIDATION_REPORT.md  GOALS_AUTH_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  P0_AI_POLLING_IMPLEMENTATION_REPORT.md  P1.5_REFACTORING_PLAN.md  POSTMORTEM_2026-01-09_SECRET_KEY.md  PROD_DEPLOYMENT_GUIDE.md  PROD_VERIFICATION_2025-12-23.md  QUICKSTART.md  QUICK_FIX_GUIDE.md  QUICK_START_DEBUG.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  ROADMAP_FIXES.md  SECURITY_AUDIT_2025-12-23.md  WEBAPP_AUTH_FIX_REPORT.md  YOOKASSA_INTEGRATION_GUIDE.md  admin-credentials.txt  ai-incident-trace.md  ai-proxy-fix-spec.md  (+16 more)
bot/: .dockerignore  .env.example  .gitignore  .gitkeep  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
bot/alembic/: env.py
bot/alembic/versions/: 20251116_1809_6aa0ade7a7c0_create_survey_tables.py  20251119_1220_46e97e78aed0_add_index_survey_answers_created_at.py  20251120_0001_add_training_level_body_goals.py  20251121_1200_add_health_limitations.py  README.md
bot/app/: __init__.py  __main__.py  config.py
bot/app/constants/: __init__.py  survey.py
bot/app/handlers/: __init__.py  personal_plan.py
bot/app/handlers/survey/: __init__.py  activity.py  body_types.py  commands.py  confirmation.py  gender.py  health.py  helpers.py  metrics.py  navigation.py  (+2 more)
bot/app/keyboards/: __init__.py  survey.py
bot/app/models/: __init__.py  base.py  survey.py  user.py
bot/app/prompts/: __init__.py  personal_plan.py
bot/app/services/: __init__.py  backend_api.py  django_integration.py  events.py  image_sender.py
bot/app/states/: __init__.py  survey.py
bot/app/texts/: __init__.py  start.py  survey.py
bot/app/utils/: __init__.py  logger.py  paths.py  pii_masking.py  secret_filter.py
bot/app/validators/: __init__.py  ai_response.py  survey.py
bot/tests/: README.md  SKIP_test_critical_bugs.py.OBSOLETE  __init__.py  bot_verification.py  conftest.py  requirements-test.txt  test_placeholder.py  test_start_survey.py
(+524 files in other folders)
